--- a/Assignment-1/main.tex
+++ b/Assignment-1/main.tex
@@ -10,6 +10,8 @@
 \usepackage{txfonts}
 \usepackage{listings}
 \usepackage{enumitem}
+\usepackage{multicol}
+\newcounter{sectioicolsn}
 \usepackage{mathtools}
 \usepackage{gensymb}
 \usepackage{comment}
@@ -98,24 +100,27 @@ Indian Institute of Technology Hyderabad
     \item{
             The number of values of the x where the function $f(x)=\cos x + \cos(\sqrt{2}x)$ attains its maximum is \\ \text{   } \hfill
                 {(1998 - 2 Marks)}
-            \begin{enumerate}
-                \item 0
-                \item 1
-                \item 2
-                \item infinite
-            \end{enumerate}
+            \begin{multicols}{2}
+                \begin{enumerate}
+                    \item 0
+                    \item 1
+                    \item 2
+                    \item infinite
+                \end{enumerate}
+            \end{multicols}
         }
     \item{
      
             The function $f(x)= \int_{-1}^x t(e^t-1)(t-1)(t-2)^3(t-3)^5dt$ has a local minimum at $x=$ \\ \text{   } \hfill
                 {(1999 - 3 Marks)}
-
-            \begin{enumerate}
-                \item 0 
-                \item 1
-                \item 2
-                \item 3
-            \end{enumerate}
+            \begin{multicols}{2}
+                \begin{enumerate}
+                    \item 0 
+                    \item 1
+                    \item 2
+                    \item 3
+                \end{enumerate}
+            \end{multicols}
         
         }
     \item{
@@ -179,20 +184,21 @@ Indian Institute of Technology Hyderabad
             \end{enumerate}
         
         }
-        \newpage
     \item{
     
         
             A rectangular sheet of fixed perimeter with sides having their lengths in the ratio 8: 15 is converted into an open rectangular box by folding after removing squares of equal area from all four corners. If the total area of removed squares is 100, the resulting box has maximum volume. Then the lengths of the sides of the rectangular sheet are
             \\ \text{   } \hfill
                 {(JEE Adv. 2013)}
-            
-            \begin{enumerate}
-                \item 24
-                \item 32
-                \item 45
-                \item 60
-            \end{enumerate}
+            \begin{multicols}{2}
+                \begin{enumerate}
+                    \item 24
+                    \item 32
+                    \item 45
+                    \item 60
+                \end{enumerate}
+            \end{multicols}
+
         %code by ysiddhanth 
         
         }
@@ -308,7 +314,6 @@ Indian Institute of Technology Hyderabad
             \end{enumerate}
         
         }
-        \newpage
     \item{
         
             Let $f: R\rightarrow R$ be given by $f(x) = (x-1)(x-2)(x-5)$.\\[6pt] 
@@ -325,6 +330,7 @@ Indian Institute of Technology Hyderabad
             \end{enumerate}
         
         }
+        \newpage
     \item{
         
             Let $f(x) = \frac{\sin(\pi x)}{x^2}, x>0$.\\[3pt]
