--- a/Assignment-1/tables/table1.tex
+++ b/Assignment-1/tables/table1.tex
@@ -1,1 +1,11 @@
-
+\begin{center}
+    \begin{tabular}{|c|c|c|c|} 
+        \hline
+               & $x=-1$ & $x = 0$ & $x = 2$ \\ 
+        \hline
+        $f(x)$ & 3      & 6       & 0       \\ 
+        \hline
+        $g(x)$ & 0      & 1       & -1       \\ 
+        \hline
+    \end{tabular}
+\end{center}  
