--- a/Assignment-1/main.tex
+++ b/Assignment-1/main.tex
@@ -219,17 +219,7 @@ Indian Institute of Technology Hyderabad
     \item{
         
             Let $f,g$: [-1,2]$\rightarrow R$ be continuous functions which are twice differentiable on the interval (-1,2). Let the values of $f$ and $g$ at the points -1,0 and 2 be as given in the following table:
-            \begin{center}
-            \begin{tabular}{|c|c|c|c|} 
-              \hline
-               & $x=-1$ & $x = 0$ & $x = 2$ \\ 
-              \hline
-               $f(x)$& 3 & 6 & 0\\ 
-              \hline
-               $g(x)$ & 0 & 1 & -1\\ 
-              \hline
-            \end{tabular}
-            \end{center}  
+            \input{tables/table1}
             In each of the intervals (-1,0) and (0,2) the function $(f-3g)''$ never vanishes. Then the correct statement(s) is(are)
             \\ \text{   } \hfill
                 {(JEE Adv. 2015)}
@@ -275,15 +265,7 @@ Indian Institute of Technology Hyderabad
         %code by ysiddhanth 
         
             If $f(x) = $
-            \begin{tabular}{|c c c|} 
-    
-               $\cos 2x$& $\cos 2x$ & $\sin 2x$ \\ 
-    
-               $- \cos x$& $\cos x$ & $\sin x$\\ 
-    
-               $\sin x$ & $\sin x$ & $\cos x$\\ 
-    
-            \end{tabular} 
+            \input{tables/table2}
             , then
             \\ \text{   } \hfill
                 {(JEE Adv. 2017)}
