--- a/Assignment-1/main.tex
+++ b/Assignment-1/main.tex
@@ -74,7 +74,7 @@ Indian Institute of Technology Hyderabad
 
 \maketitle
 
-\newpage
+
 
 
 
@@ -88,7 +88,7 @@ Indian Institute of Technology Hyderabad
     
     \begin{enumerate}
     \item{
-            If $f(x) =  \frac{x^2-1}{x^2+1}$, for every real number $x$, then the minimum value of $f$ \\ \text{   } \hfill
+            If $f\brak{x} =  \frac{x^2-1}{x^2+1}$, for every real number $x$, then the minimum value of $f$  \hfill
                 {(1998 - 2 Marks)}
             \begin{enumerate}
                 \item does not exist because f is unbounded
@@ -98,7 +98,7 @@ Indian Institute of Technology Hyderabad
             \end{enumerate} }
     %code by ysiddhanth 
     \item{
-            The number of values of the x where the function $f(x)=\cos x + \cos(\sqrt{2}x)$ attains its maximum is \\ \text{   } \hfill
+            The number of values of the x where the function $f\brak{x}=\cos x + \cos\brak{\sqrt{2}x}$ attains its maximum is  \hfill
                 {(1998 - 2 Marks)}
             \begin{multicols}{2}
                 \begin{enumerate}
@@ -111,7 +111,7 @@ Indian Institute of Technology Hyderabad
         }
     \item{
      
-            The function $f(x)= \int_{-1}^x t(e^t-1)(t-1)(t-2)^3(t-3)^5dt$ has a local minimum at $x=$ \\ \text{   } \hfill
+            The function $f\brak{x}= \int_{-1}^x t\brak{e^t-1}\brak{t-1}\brak{t-2}^3\brak{t-3}^5dt$ has a local minimum at $x=$  \hfill
                 {(1999 - 3 Marks)}
             \begin{multicols}{2}
                 \begin{enumerate}
@@ -125,27 +125,27 @@ Indian Institute of Technology Hyderabad
         }
     \item{
         
-            $f(x)$ is a cubic polynomial with  $f(2)=18$ and $f(1)=-1$. Also $f(x)$ has a local maxima at $x=-1$ and $f'(x)$ has a local minima at $x=0$, then
-            \\ \text{   } \\ \text{   } \hfill
+            $f\brak{x}$ is a cubic polynomial with  $f\brak{2}=18$ and $f\brak{1}=-1$. Also $f\brak{x}$ has a local maxima at $x=-1$ and $f'\brak{x}$ has a local minima at $x=0$, then
+              \hfill
                 {(2006 - 5M, -1)}
             
             \begin{enumerate}
-                \item the distance between (-1,2) and ($a,f(a)$), where $x=a$ is the point of local minima is $2\sqrt{5}$
-                \item $f(x)$ is increasing for $x$ $\in [1,2\sqrt{5}$]
-                \item $f(x)$ has a local minima at $x$=1
-                \item the value of $f(0)=15$
+                \item the distance between $\brak{-1,2}$ and $\brak{a,f(a)}$, where $x=a$ is the point of local minima is $2\sqrt{5}$
+                \item $f\brak{x}$ is increasing for $x$ $\in \sbrak{1,2\sqrt{5}}$
+                \item $f\brak{x}$ has a local minima at $x$=1
+                \item the value of $f\brak{0}=15$
             \end{enumerate}
         
         }
     \item{
         
-            $f(x) = $    
+            $f\brak{x} = $    
             $\begin{dcases}%code by ysiddhanth 
                 e^x, & 0 \leq x\leq 1 \\
                 2-e^{x-1}, & 1 < x\leq 2 \\
                 x-e & 2 < x\leq 3 \\
-            \end{dcases}$ and $g(x) = \int_0^{x}f(t)dt, x \in[1,3]$ then g(x) has
-            \\ \text{   } \hfill
+            \end{dcases}$ and $g\brak{x} = \int_0^{x}f\brak{t}dt, x \in[1,3]$ then g\brak{x} has
+             \hfill
                 {(2006 - 5M, -1)}
             
             \begin{enumerate}
@@ -158,28 +158,28 @@ Indian Institute of Technology Hyderabad
         }
     \item{
         
-            For the function $$f(x) = x\cos{\frac{1}{x}}, x\geq1$$
-            \\ \text{   } \hfill
+            For the function $$f\brak{x} = x\cos{\frac{1}{x}}, x\geq1$$
+             \hfill
                 {(2009)}
             
             \begin{enumerate}
-                \item for at least one $x$ in the interval [1,$\infty$), $f(x+2)-f(x)<2$
-                \item $\lim_{x\to\infty} f'(x) = 1$
-                \item for all $x$ in the interval [1,$\infty$], $f(x+2)-f(x)>2$
-                \item $f'(x)$ is strictly decreasing in the interval [1,$\infty$)
+                \item for at least one $x$ in the interval [1,$\infty$), $f(x+2)-f\brak{x}<2$
+                \item $\lim_{x\to\infty} f'\brak{x} = 1$
+                \item for all $x$ in the interval [1,$\infty$], $f(x+2)-f\brak{x}>2$
+                \item $f'\brak{x}$ is strictly decreasing in the interval [1,$\infty$)
             \end{enumerate}
         
         }
     \item{
         
-            If $f(x)= \int_{0}^x e^{t^2}(t-2)(t-3)dt$ for all $x \in(0,\infty)$, then
-            \\ \text{   } \hfill
+            If $f\brak{x}= \int_{0}^x e^{t^2}(t-2)(t-3)dt$ for all $x \in(0,\infty)$, then
+             \hfill
                 {(2012)}
             
             \begin{enumerate}
                 \item $f$ has a local maximum at $x=2$ 
                 \item $f$ is decreasing on (2,3)
-                \item there exists some c$\in(0,\infty)$, such that $f''(c)=0$
+                \item there exists some c$\in(0,\infty)$, such that $f''\brak{c}=0$
                 \item $f$ has a local minimum at $x=3$
             \end{enumerate}
         
@@ -188,7 +188,7 @@ Indian Institute of Technology Hyderabad
     
         
             A rectangular sheet of fixed perimeter with sides having their lengths in the ratio 8: 15 is converted into an open rectangular box by folding after removing squares of equal area from all four corners. If the total area of removed squares is 100, the resulting box has maximum volume. Then the lengths of the sides of the rectangular sheet are
-            \\ \text{   } \hfill
+             \hfill
                 {(JEE Adv. 2013)}
             \begin{multicols}{2}
                 \begin{enumerate}
@@ -204,77 +204,77 @@ Indian Institute of Technology Hyderabad
         }
     \item{
         
-            Let $f: (0,\infty)\rightarrow R$ be given by $f(x) = \int_{\frac{1}{x}}^x e^{-(t + \frac{1}{t})\ \frac{dt}{t}}$. Then
-            \\ \text{   } \hfill
+            Let $f: (0,\infty)\rightarrow R$ be given by $f\brak{x} = \int_{\frac{1}{x}}^x e^{-(t + \frac{1}{t})\ \frac{dt}{t}}$. Then
+             \hfill
                 {(JEE Adv. 2014)}
             
             \begin{enumerate}
-                \item $f(x)$ is monotonically increasing on [1,$\infty$)
-                \item $f(x)$ is monotonically decreasing on (0,1)
-                \item $f(x) + f(\frac{1}{x}) = 0$, for all $x \in (0,\infty)$
+                \item $f\brak{x}$ is monotonically increasing on [1,$\infty$)
+                \item $f\brak{x}$ is monotonically decreasing on (0,1)
+                \item $f\brak{x} + f\brak{\frac{1}{x}} = 0$, for all $x \in (0,\infty)$
                 \item $f(2^x)$ is an odd function of $x$ on $R$ 
             \end{enumerate}
         
         }
     \item{
         
-            Let $f,g$: [-1,2]$\rightarrow R$ be continuous functions which are twice differentiable on the interval (-1,2). Let the values of $f$ and $g$ at the points -1,0 and 2 be as given in the following table:
+            Let $f,g$: [-1,2]$\rightarrow R$ be continuous functions which are twice differentiable on the interval $\brak{-1,2}$. Let the values of $f$ and $g$ at the points -1,0 and 2 be as given in the following table:
             \input{tables/table1}
-            In each of the intervals (-1,0) and (0,2) the function $(f-3g)''$ never vanishes. Then the correct statement(s) is(are)
-            \\ \text{   } \hfill
+            In each of the intervals $\brak{-1,0}$ and $\brak{0,2}$ the function $\brak{f-3g}''$ never vanishes. Then the correct statement(s) is(are)
+             \hfill
                 {(JEE Adv. 2015)}
             
             \begin{enumerate}
-                \item $f'(x) - 3g'(x) = 0$ has exactly three solutions in (-1,0)$\cup$(0,2)
-                \item $f'(x) - 3g'(x) = 0$ has exactly one solution in (-1,0)
-                \item $f'(x) - 3g'(x) = 0$ has exactly one solution in (0,2)
-                \item $f'(x) - 3g'(x) = 0$ has exactly two solutions in (-1,0)
+                \item $f'\brak{x} - 3g'\brak{x} = 0$ has exactly three solutions in $\brak{-1,0}\cup\brak{0,2}$
+                \item $f'\brak{x} - 3g'\brak{x} = 0$ has exactly one solution in $\brak{-1,0}$
+                \item $f'\brak{x} - 3g'\brak{x} = 0$ has exactly one solution in $\brak{0,2}$
+                \item $f'\brak{x} - 3g'\brak{x} = 0$ has exactly two solutions in $\brak{-1,0}$
             \end{enumerate}
         
         }
     \item{
         
     %code by ysiddhanth 
-            Let $f: R\rightarrow (0,\infty)$ and $g: R\rightarrow R$ be twice differentiable functions such that $f''$ and $g''$ are continuous functions on $R$. Suppose $f'(2) = g(2)=0, f''(2) \neq0$ and $g'(2)\neq0$.\\[6pt] If $\lim_{x\to2}  \frac{f(x)g(x)}{f'(x)g'(x)} = 1$, then
-            \\ \text{   } \hfill
+            Let $f: R\rightarrow (0,\infty)$ and $g: R\rightarrow R$ be twice differentiable functions such that $f''$ and $g''$ are continuous functions on $R$. Suppose $f'\brak{2} = g\brak{2}=0, f''\brak{2} \neq0$ and $g'\brak{2}\neq0$.\\[6pt] If $\lim_{x\to2}  \frac{f\brak{x}g\brak{x}}{f'\brak{x}g'\brak{x}} = 1$, then
+             \hfill
                 {(JEE Adv. 2016)}
             
             \begin{enumerate}
                 \item $f$ has a local minimum at $x=2$
                 \item $f$ has a local maximum at $x=2$
-                \item $f''(2)>f(2)$
-                \item $f(x) - f''(x) = 0$ for at least one $x\in R$
+                \item $f''\brak{2}>f\brak{2}$
+                \item $f\brak{x} - f''\brak{x} = 0$ for at least one $x\in R$
             \end{enumerate}
         
         }
     \item{
         
-            If $f: R\rightarrow R$ a differentiable function such that $f'(x)>2f(x)$ for all $x \in R$ and $f(0) = 1$, then
-            \\ \text{   } \hfill
+            If $f: R\rightarrow R$ a differentiable function such that $f'\brak{x}>2f\brak{x}$ for all $x \in R$ and $f(0) = 1$, then
+             \hfill
                 {(JEE Adv. 2017)}
             
             \begin{enumerate}
-                \item $f(x)$ is increasing in $(0,\infty)$
-                \item $f(x)$ is decreasing in $(0,\infty)$
-                \item $f(x)>e^{2x}$ in $(0,\infty)$
-                \item $f'(x)<e^{2x}$ in $(0,\infty)$
+                \item $f\brak{x}$ is increasing in $\brak{0,\infty}$
+                \item $f\brak{x}$ is decreasing in $\brak{0,\infty}$
+                \item $f\brak{x}>e^{2x}$ in $\brak{0,\infty}$
+                \item $f'\brak{x}<e^{2x}$ in $\brak{0,\infty}$
             \end{enumerate}
         
         }
     \item{
         %code by ysiddhanth 
         
-            If $f(x) = $
+            If $f\brak{x} = $
             \input{tables/table2}
             , then
-            \\ \text{   } \hfill
+             \hfill
                 {(JEE Adv. 2017)}
             
             \begin{enumerate}
-                \item $f'(x) = 0$ at exactly three points in $(\pi,\pi)$
-                \item $f'(x) = 0$ at more than three points in $(\pi,\pi)$
-                \item $f(x)$ attains its maximum at $x=0$
-                \item $f(x)$ attains its minimum at $x=0$
+                \item $f'\brak{x} = 0$ at exactly three points in $\brak{-\pi,\pi}$
+                \item $f'\brak{x} = 0$ at more than three points in $\brak{-\pi,\pi}$
+                \item $f\brak{x}$ attains its maximum at $x=0$
+                \item $f\brak{x}$ attains its minimum at $x=0$
             \end{enumerate}
         
         }
@@ -285,7 +285,7 @@ Indian Institute of Technology Hyderabad
             $R_1$: rectangle of largest area, with sides parallel to the axes, inscribes in $E_1$;\\[6pt]
             $E_n : $ ellipse $\frac{x^2}{a_n^2}+ \frac{y^2}{b_n^2} = 1$ of largest area inscribed in $R_{n-1}, n>1;$\\[6pt]
             $R_n$: rectangle of largest area, with sides parallel to the axes, inscribes in $E_n$;\\ Then which of the following options is/are correct?
-            \\ \text{   } \hfill
+             \hfill
                 {(JEE Adv. 2019)}
             
             \begin{enumerate}
@@ -298,33 +298,33 @@ Indian Institute of Technology Hyderabad
         }
     \item{
         
-            Let $f: R\rightarrow R$ be given by $f(x) = (x-1)(x-2)(x-5)$.\\[6pt] 
-            Define $F(x) = \int_0^x f(t)dt, x>0$.\\[3pt]
+            Let $f: R\rightarrow R$ be given by $f\brak{x} = \brak{x-1}\brak{x-2}\brak{x-5}$.\\[6pt] 
+            Define $f\brak{x} = \int_0^x f\brak{t}dt, x>0$.\\[3pt]
             Then which of the following options is/are correct?
-            \\ \text{   } \hfill
+             \hfill
                 {(JEE Adv. 2019)}
             
             \begin{enumerate}
                 \item $F$ has a local maximum at $x=2$
                 \item $F$ has a local minimum at $x=1$
-                \item $F$ has two local maxima and one local minimum in $(0,\infty)$
-                \item $F(x) = 0$ for all $x \in (0,\infty)$
+                \item $F$ has two local maxima and one local minimum in $\brak{0,\infty}$
+                \item $f\brak{x} = 0$ for all $x \in \brak{0,\infty}$
             \end{enumerate}
         
         }
-        \newpage
+        
     \item{
         
-            Let $f(x) = \frac{\sin(\pi x)}{x^2}, x>0$.\\[3pt]
+            Let $f\brak{x} = \frac{\sin\brak{\pi x}}{x^2}, x>0$.\\[3pt]
             Let $x_1 < x_2 < x_3 < .......... <x_n <......$ be all the points of local maximum of $f$ and $y_1 < y_2 < y_3 < .......... <y_n <......$ be all the points of local minimum of $f$.\\
             Then which of the following options is/are correct?
-            \\ \text{   } \hfill
+             \hfill
                 {(JEE Adv. 2019)}
             
         %code by ysiddhanth 
             \begin{enumerate}
                 \item $x_{n+1} - x_{n} > 2$ 
-                \item $x_{n} \in (2n, 2n+\frac{1}{2})$ for every n
+                \item $x_{n} \in \brak{2n, 2n+\frac{1}{2}}$ for every n
                 \item $|x_{n} - y_{n}|> 1 $ for every n
                 \item $x_{1} < y_{1}$
             \end{enumerate}
@@ -333,3 +333,4 @@ Indian Institute of Technology Hyderabad
     \end{enumerate}
 \end{document}
 %code by ysiddhanth 
+
