--- a/Assignment-1/main.tex
+++ b/Assignment-1/main.tex
@@ -145,7 +145,7 @@ Indian Institute of Technology Hyderabad
                 2-e^{x-1}, & 1 < x\leq 2 \\
                 x-e & 2 < x\leq 3 \\
             \end{dcases}$ and $g\brak{x} = \int_0^{x}f\brak{t}dt, x \in[1,3]$ then g\brak{x} has
-             \hfill
+             \\ \text{   } \hfill
                 {(2006 - 5M, -1)}
             
             \begin{enumerate}
@@ -235,8 +235,8 @@ Indian Institute of Technology Hyderabad
     \item{
         
     %code by ysiddhanth 
-            Let $f: R\rightarrow (0,\infty)$ and $g: R\rightarrow R$ be twice differentiable functions such that $f''$ and $g''$ are continuous functions on $R$. Suppose $f'\brak{2} = g\brak{2}=0, f''\brak{2} \neq0$ and $g'\brak{2}\neq0$.\\[6pt] If $\lim_{x\to2}  \frac{f\brak{x}g\brak{x}}{f'\brak{x}g'\brak{x}} = 1$, then
-             \hfill
+            Let $f: R\rightarrow (0,\infty)$ and $g: R\rightarrow R$ be twice differentiable functions such that $f''$ and $g''$ are continuous functions on $R$. Suppose $f'\brak{2} = g\brak{2}=0, f''\brak{2} \neq0$ and $g'\brak{2}\neq0$.\\[6pt] If $\lim_{x\to2}  \frac{f\brak{x}g\brak{x}}{f'\brak{x}g'\brak{x}} = 1$, then \\
+             \text{  }\hfill
                 {(JEE Adv. 2016)}
             
             \begin{enumerate}
@@ -250,7 +250,7 @@ Indian Institute of Technology Hyderabad
     \item{
         
             If $f: R\rightarrow R$ a differentiable function such that $f'\brak{x}>2f\brak{x}$ for all $x \in R$ and $f(0) = 1$, then
-             \hfill
+             \text{   }\hfill
                 {(JEE Adv. 2017)}
             
             \begin{enumerate}
@@ -266,8 +266,8 @@ Indian Institute of Technology Hyderabad
         
             If $f\brak{x} = $
             \input{tables/table2}
-            , then
-             \hfill
+            , then \\
+            \text{   } \hfill
                 {(JEE Adv. 2017)}
             
             \begin{enumerate}
@@ -333,4 +333,3 @@ Indian Institute of Technology Hyderabad
     \end{enumerate}
 \end{document}
 %code by ysiddhanth 
-
