--- a/Assignment-1/main.tex
+++ b/Assignment-1/main.tex
@@ -1,59 +1,25 @@
-\let\negmedspace\undefined
-\let\negthickspace\undefined
-\documentclass[journal,12pt,twocolumn]{IEEEtran}
-\usepackage{cite}
-\usepackage{amsmath,amssymb,amsfonts,amsthm}
-\usepackage{algorithmic}
-\usepackage{graphicx}
-\usepackage{textcomp}
-\usepackage{xcolor}
-\usepackage{txfonts}
-\usepackage{listings}
-\usepackage{enumitem}
-\usepackage{multicol}
-\newcounter{sectioicolsn}
-\usepackage{mathtools}
-\usepackage{gensymb}
-\usepackage{comment}
-\usepackage[breaklinks=true]{hyperref}
-\usepackage{tkz-euclide} 
-\usepackage{listings}
-\usepackage{gvv}  
-\usepackage{tikz}
-\usepackage{circuitikz} 
-\usepackage{caption}
-\def\inputGnumericTable{}              
-\usepackage[latin1]{inputenc}                   
-\usepackage{color}                    
-\usepackage{array}                     
-\usepackage{longtable}                 
-\usepackage{calc}                     \usepackage{multirow}                  
-\usepackage{hhline}                    
-\usepackage{ifthen}                    
-\usepackage{lscape}
-\usepackage{amsmath}
-\newtheorem{theorem}{Theorem}[section]
-\newtheorem{problem}{Problem}
-\newtheorem{proposition}{Proposition}[section]
-\newtheorem{lemma}{Lemma}[section]
-\newtheorem{corollary}[theorem]{Corollary}
-\newtheorem{example}{Example}[section]
-\newtheorem{definition}[problem]{Definition}
-\newcommand{\BEQA}{\begin{eqnarray}}
-\newcommand{\EEQA}{\end{eqnarray}}
-\newcommand{\define}{\stackrel{\triangle}{=}}
-\theoremstyle{remark}
-\newtheorem{rem}{Remark}
+\documentclass[journal]{IEEEtran}
+\usepackage[a5paper, margin=10mm]{geometry}
+%\usepackage{lmodern} % Ensure lmodern is loaded for pdflatex
+\usepackage{tfrupee} % Include tfrupee package
 
-%\bibliographystyle{ieeetr}
+
+\setlength{\headheight}{1cm} % Set the height of the header box
+\setlength{\headsep}{0mm}     % Set the distance between the header box and the top of the text
+
+
+%\usepackage[a5paper, top=10mm, bottom=10mm, left=10mm, right=10mm]{geometry}
+
+%
+\usepackage{gvv-book}
+\usepackage{gvv}
+\setlength{\intextsep}{10pt} % Space between text and floats
+
+\makeindex
+
 \begin{document}
-%code by ysiddhanth
-
 \bibliographystyle{IEEEtran}
-
-
-%code by ysiddhanth 
-
+\onecolumn
 \title{
 %	\logo{
 ASSIGNMENT 1: D16(7 TO 22)
@@ -88,14 +54,15 @@ Indian Institute of Technology Hyderabad
     
     \begin{enumerate}
     \item{
-            If $f\brak{x} =  \frac{x^2-1}{x^2+1}$, for every real number $x$, then the minimum value of $f$  \hfill
+            If $f\brak{x} =  \frac{x^2-1}{x^2+1}$, for every real number $x$, then the minimum value of $f$  \\ \text{  }\hfill
                 {(1998 - 2 Marks)}
             \begin{enumerate}
                 \item does not exist because f is unbounded
                 \item is not attained even though f is bounded
                 \item is equal to 1
                 \item is equal to -1
-            \end{enumerate} }
+            \end{enumerate} 
+            }
     %code by ysiddhanth 
     \item{
             The number of values of the x where the function $f\brak{x}=\cos x + \cos\brak{\sqrt{2}x}$ attains its maximum is  \hfill
@@ -207,13 +174,14 @@ Indian Institute of Technology Hyderabad
             Let $f: (0,\infty)\rightarrow R$ be given by $f\brak{x} = \int_{\frac{1}{x}}^x e^{-(t + \frac{1}{t})\ \frac{dt}{t}}$. Then
              \hfill
                 {(JEE Adv. 2014)}
-            
-            \begin{enumerate}
-                \item $f\brak{x}$ is monotonically increasing on [1,$\infty$)
-                \item $f\brak{x}$ is monotonically decreasing on (0,1)
-                \item $f\brak{x} + f\brak{\frac{1}{x}} = 0$, for all $x \in (0,\infty)$
-                \item $f(2^x)$ is an odd function of $x$ on $R$ 
-            \end{enumerate}
+            \begin{multicols}{2}
+                \begin{enumerate}
+                    \item $f\brak{x}$ is monotonically increasing on [1,$\infty$)
+                    \item $f\brak{x}$ is monotonically decreasing on (0,1)
+                    \item $f\brak{x} + f\brak{\frac{1}{x}} = 0$, for all $x \in (0,\infty)$
+                    \item $f(2^x)$ is an odd function of $x$ on $R$ 
+                \end{enumerate}
+            \end{multicols}
         
         }
     \item{
@@ -238,13 +206,14 @@ Indian Institute of Technology Hyderabad
             Let $f: R\rightarrow (0,\infty)$ and $g: R\rightarrow R$ be twice differentiable functions such that $f''$ and $g''$ are continuous functions on $R$. Suppose $f'\brak{2} = g\brak{2}=0, f''\brak{2} \neq0$ and $g'\brak{2}\neq0$.\\[6pt] If $\lim_{x\to2}  \frac{f\brak{x}g\brak{x}}{f'\brak{x}g'\brak{x}} = 1$, then \\
              \text{  }\hfill
                 {(JEE Adv. 2016)}
-            
-            \begin{enumerate}
-                \item $f$ has a local minimum at $x=2$
-                \item $f$ has a local maximum at $x=2$
-                \item $f''\brak{2}>f\brak{2}$
-                \item $f\brak{x} - f''\brak{x} = 0$ for at least one $x\in R$
-            \end{enumerate}
+            \begin{multicols}{2}
+                \begin{enumerate}
+                    \item $f$ has a local minimum at $x=2$
+                    \item $f$ has a local maximum at $x=2$
+                    \item $f''\brak{2}>f\brak{2}$
+                    \item $f\brak{x} - f''\brak{x} = 0$ for at least one $x\in R$
+                \end{enumerate}
+            \end{multicols}
         
         }
     \item{
@@ -252,13 +221,14 @@ Indian Institute of Technology Hyderabad
             If $f: R\rightarrow R$ a differentiable function such that $f'\brak{x}>2f\brak{x}$ for all $x \in R$ and $f(0) = 1$, then
              \text{   }\hfill
                 {(JEE Adv. 2017)}
-            
-            \begin{enumerate}
-                \item $f\brak{x}$ is increasing in $\brak{0,\infty}$
-                \item $f\brak{x}$ is decreasing in $\brak{0,\infty}$
-                \item $f\brak{x}>e^{2x}$ in $\brak{0,\infty}$
-                \item $f'\brak{x}<e^{2x}$ in $\brak{0,\infty}$
-            \end{enumerate}
+            \begin{multicols}{2}
+                \begin{enumerate}
+                    \item $f\brak{x}$ is increasing in $\brak{0,\infty}$
+                    \item $f\brak{x}$ is decreasing in $\brak{0,\infty}$
+                    \item $f\brak{x}>e^{2x}$ in $\brak{0,\infty}$
+                    \item $f'\brak{x}<e^{2x}$ in $\brak{0,\infty}$
+                \end{enumerate}
+            \end{multicols}
         
         }
     \item{
@@ -269,12 +239,11 @@ Indian Institute of Technology Hyderabad
             , then \\
             \text{   } \hfill
                 {(JEE Adv. 2017)}
-            
             \begin{enumerate}
-                \item $f'\brak{x} = 0$ at exactly three points in $\brak{-\pi,\pi}$
-                \item $f'\brak{x} = 0$ at more than three points in $\brak{-\pi,\pi}$
-                \item $f\brak{x}$ attains its maximum at $x=0$
-                \item $f\brak{x}$ attains its minimum at $x=0$
+                    \item $f'\brak{x} = 0$ at exactly three points in $\brak{-\pi,\pi}$
+                    \item $f'\brak{x} = 0$ at more than three points in $\brak{-\pi,\pi}$
+                    \item $f\brak{x}$ attains its maximum at $x=0$
+                    \item $f\brak{x}$ attains its minimum at $x=0$
             \end{enumerate}
         
         }
@@ -322,14 +291,17 @@ Indian Institute of Technology Hyderabad
                 {(JEE Adv. 2019)}
             
         %code by ysiddhanth 
-            \begin{enumerate}
-                \item $x_{n+1} - x_{n} > 2$ 
-                \item $x_{n} \in \brak{2n, 2n+\frac{1}{2}}$ for every n
-                \item $|x_{n} - y_{n}|> 1 $ for every n
-                \item $x_{1} < y_{1}$
-            \end{enumerate}
+            \begin{multicols}{2}
+                \begin{enumerate}
+                    \item $x_{n+1} - x_{n} > 2$ 
+                    \item $x_{n} \in \brak{2n, 2n+\frac{1}{2}}$ for every n
+                    \item $|x_{n} - y_{n}|> 1 $ for every n
+                    \item $x_{1} < y_{1}$
+                \end{enumerate}
+            \end{multicols}
         
         }
     \end{enumerate}
 \end{document}
-%code by ysiddhanth 
+
+
