--- a/1-1.2-29/main.tex
+++ b/1-1.2-29/main.tex
@@ -42,7 +42,7 @@
 \vspace{3cm}
 
 \title{10.5.3.9}
-\author{EE23BTECH11063 - Yellanki Siddhanth
+\author{EE24BTECH11059 - Yellanki Siddhanth
 }
 % \maketitle
 % \newpage
@@ -69,22 +69,12 @@ Plot the points \brak{x,y} in Table 1.2.29
 
 
 \textbf{Solution: }\\
-  Let us first define the points:
-  \begin{align}
-    A \Rightarrow \myvec{-2 \\ 8}
-  \end{align}
-  \begin{align}
-    B \Rightarrow \myvec{-1 \\ 7}
-  \end{align}
-  \begin{align}
-    C \Rightarrow \myvec{0 \\ -1.25}
-  \end{align}
-  \begin{align}
-    D \Rightarrow \myvec{1 \\ 3}
-  \end{align}
-  \begin{align}
-    E \Rightarrow \myvec{3 \\ -1}
-  \end{align}
+  Plotting the Points:
+    \begin{table}[h!]    
+      \centering
+      \input{tables/table2.tex}
+      \caption{}
+    \end{table}\\
     \begin{figure}[h]
         \centering
        \includegraphics[width=0.7\linewidth]{figs/fig1.png}
@@ -92,6 +82,5 @@ Plot the points \brak{x,y} in Table 1.2.29
        \label{graph}
     \end{figure}
 \end{document}  
-\end{document}
 
 
