--- a/Assignment-1/main.tex
+++ b/Assignment-1/main.tex
@@ -92,7 +92,7 @@ Indian Institute of Technology Hyderabad
         }
     \item{
         
-            $f\brak{x}$ is a cubic polynomial with  $f\brak{2}=18$ and $f\brak{1}=-1$. Also $f\brak{x}$ has a local maxima at $x=-1$ and $f'\brak{x}$ has a local minima at $x=0$, then
+            $f\brak{x}$ is a cubic polynomial with  $f\brak{2}=18$ and $f\brak{1}=-1$. Also $f\brak{x}$ has a local maxima at $x=-1$ and $f^{\prime}\brak{x}$ has a local minima at $x=0$, then
               \hfill
                 {(2006 - 5M, -1)}
             
@@ -131,9 +131,9 @@ Indian Institute of Technology Hyderabad
             
             \begin{enumerate}
                 \item for at least one $x$ in the interval [1,$\infty$), $f(x+2)-f\brak{x}<2$
-                \item $\lim_{x\to\infty} f'\brak{x} = 1$
+                \item $\lim_{x\to\infty} f^{\prime}\brak{x} = 1$
                 \item for all $x$ in the interval [1,$\infty$], $f(x+2)-f\brak{x}>2$
-                \item $f'\brak{x}$ is strictly decreasing in the interval [1,$\infty$)
+                \item $f^{\prime}\brak{x}$ is strictly decreasing in the interval [1,$\infty$)
             \end{enumerate}
         
         }
@@ -146,7 +146,7 @@ Indian Institute of Technology Hyderabad
             \begin{enumerate}
                 \item $f$ has a local maximum at $x=2$ 
                 \item $f$ is decreasing on (2,3)
-                \item there exists some c$\in(0,\infty)$, such that $f''\brak{c}=0$
+                \item there exists some c$\in(0,\infty)$, such that $f^{\prime\prime}\brak{c}=0$
                 \item $f$ has a local minimum at $x=3$
             \end{enumerate}
         
@@ -193,32 +193,32 @@ Indian Institute of Technology Hyderabad
                 {(JEE Adv. 2015)}
             
             \begin{enumerate}
-                \item $f'\brak{x} - 3g'\brak{x} = 0$ has exactly three solutions in $\brak{-1,0}\cup\brak{0,2}$
-                \item $f'\brak{x} - 3g'\brak{x} = 0$ has exactly one solution in $\brak{-1,0}$
-                \item $f'\brak{x} - 3g'\brak{x} = 0$ has exactly one solution in $\brak{0,2}$
-                \item $f'\brak{x} - 3g'\brak{x} = 0$ has exactly two solutions in $\brak{-1,0}$
+                \item $f^{\prime}\brak{x} - 3g^{\prime}\brak{x} = 0$ has exactly three solutions in $\brak{-1,0}\cup\brak{0,2}$
+                \item $f^{\prime}\brak{x} - 3g^{\prime}\brak{x} = 0$ has exactly one solution in $\brak{-1,0}$
+                \item $f^{\prime}\brak{x} - 3g^{\prime}\brak{x} = 0$ has exactly one solution in $\brak{0,2}$
+                \item $f^{\prime}\brak{x} - 3g^{\prime}\brak{x} = 0$ has exactly two solutions in $\brak{-1,0}$
             \end{enumerate}
         
         }
     \item{
         
     %code by ysiddhanth 
-            Let $f: R\rightarrow (0,\infty)$ and $g: R\rightarrow R$ be twice differentiable functions such that $f''$ and $g''$ are continuous functions on $R$. Suppose $f'\brak{2} = g\brak{2}=0, f''\brak{2} \neq0$ and $g'\brak{2}\neq0$.\\[6pt] If $\lim_{x\to2}  \frac{f\brak{x}g\brak{x}}{f'\brak{x}g'\brak{x}} = 1$, then \\
+            Let $f: R\rightarrow (0,\infty)$ and $g: R\rightarrow R$ be twice differentiable functions such that $f^{\prime\prime}$ and $g^{\prime\prime}$ are continuous functions on $R$. Suppose $f^{\prime}\brak{2} = g\brak{2}=0, f^{\prime\prime}\brak{2} \neq0$ and $g^{\prime}\brak{2}\neq0$.\\[6pt] If $\lim_{x\to2}  \frac{f\brak{x}g\brak{x}}{f^{\prime}\brak{x}g^{\prime}\brak{x}} = 1$, then \\
              \text{  }\hfill
                 {(JEE Adv. 2016)}
             \begin{multicols}{2}
                 \begin{enumerate}
                     \item $f$ has a local minimum at $x=2$
                     \item $f$ has a local maximum at $x=2$
-                    \item $f''\brak{2}>f\brak{2}$
-                    \item $f\brak{x} - f''\brak{x} = 0$ for at least one $x\in R$
+                    \item $f^{\prime\prime}\brak{2}>f\brak{2}$
+                    \item $f\brak{x} - f^{\prime\prime}\brak{x} = 0$ for at least one $x\in R$
                 \end{enumerate}
             \end{multicols}
         
         }
     \item{
         
-            If $f: R\rightarrow R$ a differentiable function such that $f'\brak{x}>2f\brak{x}$ for all $x \in R$ and $f(0) = 1$, then
+            If $f: R\rightarrow R$ a differentiable function such that $f^{\prime}\brak{x}>2f\brak{x}$ for all $x \in R$ and $f(0) = 1$, then
              \text{   }\hfill
                 {(JEE Adv. 2017)}
             \begin{multicols}{2}
@@ -226,7 +226,7 @@ Indian Institute of Technology Hyderabad
                     \item $f\brak{x}$ is increasing in $\brak{0,\infty}$
                     \item $f\brak{x}$ is decreasing in $\brak{0,\infty}$
                     \item $f\brak{x}>e^{2x}$ in $\brak{0,\infty}$
-                    \item $f'\brak{x}<e^{2x}$ in $\brak{0,\infty}$
+                    \item $f^{\prime}\brak{x}<e^{2x}$ in $\brak{0,\infty}$
                 \end{enumerate}
             \end{multicols}
         
@@ -240,8 +240,8 @@ Indian Institute of Technology Hyderabad
             \text{   } \hfill
                 {(JEE Adv. 2017)}
             \begin{enumerate}
-                    \item $f'\brak{x} = 0$ at exactly three points in $\brak{-\pi,\pi}$
-                    \item $f'\brak{x} = 0$ at more than three points in $\brak{-\pi,\pi}$
+                    \item $f^{\prime}\brak{x} = 0$ at exactly three points in $\brak{-\pi,\pi}$
+                    \item $f^{\prime}\brak{x} = 0$ at more than three points in $\brak{-\pi,\pi}$
                     \item $f\brak{x}$ attains its maximum at $x=0$
                     \item $f\brak{x}$ attains its minimum at $x=0$
             \end{enumerate}
@@ -249,7 +249,7 @@ Indian Institute of Technology Hyderabad
         }
     \item{
         
-            Define the collection $\{E_1, E_2, E_3, .....\}$ of ellipses and $\{R_1, R_2, R_3, .....\}$ of rectangles as follows:\\[6pt]
+            Define the collection $\cbrak{E_1, E_2, E_3, .....}$ of ellipses and $\cbrak{R_1, R_2, R_3, .....}$ of rectangles as follows:\\[6pt]
             $E_1 : \frac{x^2}{9}+ \frac{y^2}{4} = 1$;\\[6pt]
             $R_1$: rectangle of largest area, with sides parallel to the axes, inscribes in $E_1$;\\[6pt]
             $E_n : $ ellipse $\frac{x^2}{a_n^2}+ \frac{y^2}{b_n^2} = 1$ of largest area inscribed in $R_{n-1}, n>1;$\\[6pt]
@@ -303,5 +303,6 @@ Indian Institute of Technology Hyderabad
         }
     \end{enumerate}
 \end{document}
+
 
 
