--- a/1-1.5-33/tables/table1.tex
+++ b/1-1.5-33/tables/table1.tex
@@ -1,9 +1,13 @@
 \begin{center}
-    \begin{tabular}{|c|c|c|c|c|c|} 
+    \begin{tabular}{|c|c|c|} 
         \hline
-            x   & -2 & -1 & 0 & 1 & 3 \\ 
+               & $x$ & $y$ \\ 
         \hline
-            y   & 8 & 7 & -1.25 & 3 & -1 \\ 
+            $A$   & 5 & -6 \\ 
+        \hline
+            $B$   & -1 & -4\\ 
+        \hline
+            $C$   & 0 & y\\ 
         \hline
     \end{tabular}
 \end{center}  
