--- a/1-1.5-33/tables/table1.tex
+++ b/1-1.5-33/tables/table1.tex
@@ -1,13 +1,15 @@
 \begin{center}
     \begin{tabular}{|c|c|c|} 
         \hline
-               & $x$ & $y$ \\ 
+            \textbf{Variable} & \textbf{Description} & \textbf{Formula} \\ 
         \hline
-            $A$   & 5 & -6 \\ 
+            $A$   & It is one end of the line segment & $A = \myvec{5 \\ -6}$ \\ 
         \hline
-            $B$   & -1 & -4\\ 
+            $B$   & It is other end of line segment &  $B = \myvec{-1\\-4}$\\ 
         \hline
-            $C$   & 0 & y\\ 
+            $C$   & It is the point of intersection of line segment and $Y$-axis & $C  = \myvec{0\\y}$\\ 
+        \hline
+            $k$   & It is the ratio in which $C$ divides the line segment $AB$ & $C  = \brak{\frac{B + kA}{1 + k}}$\\ 
         \hline
     \end{tabular}
 \end{center}  
