--- a/1-1.6-22/main.tex
+++ b/1-1.6-22/main.tex
@@ -25,7 +25,7 @@
 \usepackage[breaklinks=true]{hyperref}
 \usepackage{tkz-euclide} 
 \usepackage{listings}
-\usepackage{gvv}                                        
+% \usepackage{gvv}                                        
 \def\inputGnumericTable{}                                 
 \usepackage[latin1]{inputenc}                                
 \usepackage{color}                                            
@@ -41,7 +41,7 @@
 \bibliographystyle{IEEEtran}
 \vspace{3cm}
 
-\title{1.1.6.19}
+\title{1.1.5.33}
 \author{EE24BTECH11059 - Yellanki Siddhanth
 }
 % \maketitle
