--- a/1-1.6-22/main.tex
+++ b/1-1.6-22/main.tex
@@ -41,7 +41,7 @@
 \bibliographystyle{IEEEtran}
 \vspace{3cm}
 
-\title{1.1.5.33}
+\title{1.1.6.22}
 \author{EE24BTECH11059 - Yellanki Siddhanth
 }
 % \maketitle
@@ -60,58 +60,33 @@
 
 
 \textbf{Question}:\\
-
-The vectors $\lambda\hat{i} + \hat{j} +2\hat{k}$, $\hat{i} + \lambda\hat{j} - \hat{k}$ and $2\hat{i} - \hat{j} +\lambda\hat{k}$  are coplanar if $\lambda = $
+Show that the points $A\brak{2,-3,4}$,$B\brak{-1,2,1}$ and $C\brak{0,\frac{1}{3},2}$ are collinear
 \\ \textbf{Solution: }\\
     \begin{table}[h!]    
       \centering
       \input{tables/table1.tex}
       \caption{}
     \end{table}\\
-The rank of a matrix $M$ is less than 3, then the matrix is coplanar. 
+The rank of a matrix $M$ is less than 3, then the matrix is collinear. 
     \begin{align}
-        Rank\brak{M} = 2\label{eq1.1.6.19.1}
+        Rank\brak{M} = 1\label{eq1.1.6.22.1}
     \end{align}
-Equivalently,
+Computing matrix $M$
     \begin{align}
-        \abs{M} = 0 \label{eq1.1.6.19.2}
+        M = \myvec{-3 & 5 & -3 \\ -2 & \frac{10}{3}& -2}
+        \xleftrightarrow[]{R_2 \leftarrow {R_2-\frac{2}{3}R_1}}  \label{eq1.1.6.22.2}
+        \myvec{-3 & 5 & -3 \\ 0 & 0 & 0}
     \end{align}
-    \begin{align}
-        \abs{M} = \myvec{\lambda & 1 & 2 \\ 1 & \lambda & -1 \\ 2 & -1 & \lambda} = 0 \label{eq1.1.6.19.3}
-    \end{align}
-    \begin{align}
-        \lambda\brak{\lambda^2 - 1} - 1\brak{\lambda+2} + 2\brak{-1-2\lambda} = 0  \label{eq1.1.6.19.4}
-    \end{align}
-    \begin{align}
-        \lambda^3 - 6\lambda - 4 = 0  \label{eq1.1.6.19.5}
-    \end{align}
-    \begin{align}
-        \brak{\lambda + 2}\brak{\lambda^2 - 2\lambda - 2} = 0  \label{eq1.1.6.19.6}
-    \end{align}
-    \begin{align}
-         \lambda = -2 \text{ or } \lambda = 1 \pm \sqrt{3}\label{eq1.1.6.19.6}
-    \end{align}
-    
-$\therefore$ Verifying $\lambda$ values:
+Thus we can conclude that the rank of matrix $M$ is 1 and thus $A,B,C$ are collinear.\\
     \begin{figure}[h]
         \centering
        \includegraphics[width=0.7\linewidth]{figs/fig1.png}
        \caption{}
        \label{graph}
     \end{figure}
-    \begin{figure}[h]
-        \centering
-       \includegraphics[width=0.7\linewidth]{figs/fig2.png}
-       \caption{}
-       \label{graph}
-    \end{figure}
-    \begin{figure}[h]
-        \centering
-       \includegraphics[width=0.7\linewidth]{figs/fig3.png}
-       \caption{}
-       \label{graph}
-    \end{figure}
+
 \end{document}  
+
 
 
 
