--- a/1-1.6-22/tables/table1.tex
+++ b/1-1.6-22/tables/table1.tex
@@ -3,16 +3,15 @@
         \hline
             \textbf{Variable} & \textbf{Description} & \textbf{Formula} \\ 
         \hline
-            $A$   & A vector in terms of $\lambda$ & $A = \myvec{\lambda \\ 1 \\ 2}$ \\ 
+            $A$   & A 3d Point to be plotted & $A = \myvec{2 & -3 & 4}$ \\ 
         \hline
-            $B$   & A vector in terms of $\lambda$ &  $B = \myvec{1\\ \lambda \\ -1}$\\ 
+            $B$   &  A 3d Point to be plotted &  $B = \myvec{-1 & 2 & 1}$\\ 
         \hline
-            $C$   & A vector in terms of $\lambda$ & $C  = \myvec{2\\-1\\ \lambda}$\\ 
+            $C$   & A 3d Point to be plotted & $C  = \myvec{0&\frac{1}{3}& 2}$\\ 
         \hline
-            $M$   & It is a matrix comprising of vectors $A,B,C$ & $M = \sbrak{A,B,C}$\\ 
-        \hline
-            $\lambda$   & It is the variable with which $A,B,C$ are established & $|M|=0$\\ 
+            $M$   & It is a matrix comprising of vectors $B-A$ and $C-A$ & $M$ = \textbf{$\sbrak{B-A,C-A}$}\\ 
         \hline
     \end{tabular}
 \end{center}  
+
 
