--- a/1-1.6-22/main.tex
+++ b/1-1.6-22/main.tex
@@ -67,7 +67,7 @@ Show that the points $A\brak{2,-3,4}$,$B\brak{-1,2,1}$ and $C\brak{0,\frac{1}{3}
       \input{tables/table1.tex}
       \caption{}
     \end{table}\\
-The rank of a matrix $M$ is less than 3, then the matrix is collinear. 
+The rank of a matrix $M$ is 1, then the matrix is collinear. 
     \begin{align}
         Rank\brak{M} = 1\label{eq1.1.6.22.1}
     \end{align}
