--- a/1-1.6-13/main.tex
+++ b/1-1.6-13/main.tex
@@ -76,19 +76,7 @@ Computing matrix $M$
         M = \myvec{0 & 3\\ -14 & 1}\label{eq1.1.6.22.2}
     \end{align}
 Clearly we can conclude that the rank of matrix $M$ is $\neq$ 1\\ $\therefore$ $A,B,C$ are not collinear.\\
-
-\textbf{Alternate Solution}:
-If said points $A,B,C$ are collinear, then the area of $\triangle ABC$ is 0.
-    \begin{align}
-        Area = \frac{1}{2}\abs{\abs{\brak{A-B}\times\brak{A-C}}}\label{eq1.1.6.22.3}
-    \end{align}
-    \begin{align}
-        Area = \frac{1}{2}\abs{\abs{\myvec{0\\14}\times\myvec{-3\\-1}}}\label{eq1.1.6.22.3}
-    \end{align}
-    \begin{align}
-        Area = \frac{1}{2}\abs{\abs{-42}} = 21 sq.units\label{eq1.1.6.22.3}
-    \end{align}
-Since $Area \neq 0$, the points $A,B,C$ are not collinear.
+(It is a special case as it is square matrix. In the case of non-square matrices, solutions to the system can still exist, but the conditions are more complex. The rank doesnt necessarily provide as straightforward answer to the uniqueness or existence of solutions as it does with square matrices.)\\
     \begin{figure}[h]
         \centering
        \includegraphics[width=0.7\linewidth]{figs/fig1.png}
