--- a/1-1.6-13/main.tex
+++ b/1-1.6-13/main.tex
@@ -77,6 +77,8 @@ Computing matrix $M$
     \end{align}
 Clearly we can conclude that the rank of matrix $M$ is $\neq$ 1\\ $\therefore$ $A,B,C$ are not collinear.\\
 (It is a special case as it is square matrix. In the case of non-square matrices, solutions to the system can still exist, but the conditions are more complex. The rank doesnt necessarily provide as straightforward answer to the uniqueness or existence of solutions as it does with square matrices.)\\
+
+For an $m\times n$ matrix with $n>m$, the system can have infinitely many solutions or no solution at all. If the rank equals $m$, there may be infinitely many solutions; if the rank is less than $m$, there may be no solution. Unlike square matrices, the rank doesn't straightforwardly determine solution existence or uniqueness.
     \begin{figure}[h]
         \centering
        \includegraphics[width=0.7\linewidth]{figs/fig1.png}
