--- a/1-1.8-28 /main.tex
+++ b/1-1.8-28 /main.tex
@@ -7,7 +7,6 @@
 
 \setlength{\headheight}{1cm} % Set the height of the header box
 \setlength{\headsep}{0mm}     % Set the distance between the header box and the top of the text
-
 \usepackage{gvv-book}
 \usepackage{gvv}
 \usepackage{cite}
@@ -70,31 +69,34 @@ $A\brak{3, 4, -5}$ and $B\brak{-2, 1, 4}$ are equal.
     \end{table}\\
 If \textbf{O} is equidistant from the points \textbf{A} and \textbf{B}
     \begin{align}
-        \abs{\abs{\boldsymbol{O}-\boldsymbol{A}}} = \abs{\abs{\boldsymbol{O}-\boldsymbol{B}}}\label{eq1.1.8.28.1}
+        \abs{\abs{\boldsymbol{O}-\boldsymbol{A}}} = \abs{\abs{\boldsymbol{O}-\boldsymbol{B}}}\\ \label{eq1.1.8.28.1}
     \end{align}
      \begin{align}
-        \abs{\abs{\boldsymbol{O}-\boldsymbol{A}}}^2 = \abs{\abs{\boldsymbol{O}-\boldsymbol{B}}}^2\label{eq1.1.8.28.2}
+        \abs{\abs{\boldsymbol{O}-\boldsymbol{A}}}^2 = \abs{\abs{\boldsymbol{O}-\boldsymbol{B}}}^2\label{eq1.1.8.28.2}\\
     \end{align}
     \begin{align}
     	\abs{\abs{\boldsymbol{O}}}^2 - 2\boldsymbol{O}^\top \boldsymbol{A} + \abs{\abs{\boldsymbol{A}}}^2 = \abs{\abs{\boldsymbol{O}}}^2 - 2\boldsymbol{O}^\top\boldsymbol{B} + \abs{\abs{\boldsymbol{B}}}^2\label{eq1.1.8.28.3}
     \end{align}
 By simplifying further,
     \begin{align}
-    	\brak{\boldsymbol{A}-\boldsymbol{B}}^\top O = \frac{\abs{\abs{\boldsymbol{A}}}^2-\abs{\abs{\boldsymbol{B}}}^2}{2}\label{eq1.1.8.28.4}
+    	\brak{\boldsymbol{A}-\boldsymbol{B}}^\top O = \frac{\abs{\abs{\boldsymbol{A}}}^2-\abs{\abs{\boldsymbol{B}}}^2}{2} \label{eq1.1.8.28.4}
     \end{align}
 The above equation is the general expression for the perpendicular bisecting plane between any points $\boldsymbol{A}$ and $\boldsymbol{B}$.\\
 Substituting the $\boldsymbol{A}$ and $\boldsymbol{B}$ values in the derived equation.\\
     \begin{align}
-    	\myvec{5 \\ 3 \\ -9}^\top O = \frac{\abs{\abs{\myvec{3 \\ 4\\-5}}}^2-\abs{\abs{\myvec{-2\\ 1\\4}}}^2}{2}\label{eq1.1.8.28.5}
-    \end{align}
-    \begin{align}
-    	\myvec{5 \\ 3 \\ -9}^\top O = \frac{29}{2}\label{eq1.1.8.28.6}
+    	\myvec{5 \\ 3 \\ -9}^\top O = \frac{\abs{\abs{\myvec{3 \\ 4\\-5}}}^2-\abs{\abs{\myvec{-2\\ 1\\4}}}^2}{2} = \frac{29}{2}\label{eq1.1.8.28.5}
     \end{align}
 Comparing with $n^\top x = c$
     \begin{align}
-    	\boldsymbol{n} = \myvec{5 \\ 3 \\ -9}\\ \label{eq1.1.8.28.7}
-	    \boldsymbol{c} = \frac{29}{2}
+    	\boldsymbol{n} = \myvec{5 \\ 3 \\ -9}\\ \label{eq1.1.8.28.6}
+	    \boldsymbol{c} = \frac{29}{2}\\    
     \end{align}
+Final Plane equation is:
+
+	\begin{align}
+		Plane \equiv 5x + 3y - 9z = 14.5
+	\end{align}    
+    
 
     \begin{figure}[h]
         \centering
